desenvolvimeto do html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div>
+        <img src="./meus projetos.jpg" alt="imagem 88 por 88, sophia santana">
         <h1>sophia santana</h1>
     </div>
 </body>
