término do desenvolvimento do HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <div>
         <img src="./meus projetos.jpg" alt="imagem 88 por 88, sophia santana">
         <h1>sophia santana</h1>
-    </div>
+        <p>são paulo,brasil</p>
+
+        <p>"Desenvolverdor front-end viciado em leitura."</p>
+
+     <a href="https://github.com/sososantna/meus-links/commit/ca78e1d29499f998c954b9af93ac87d6434f089c">github</a>
+    <a href="https://www.tiktok.com/@_musa_002?lang=pt-BR">tiktok</a>
+    <a href="https://www.instagram.com/sophia_santna/?next=%2F">instagram</a>
+    <a href="https://br.pinterest.com/">pinterest</a>
+    <a href="https://open.spotify.com/intl-pt">sportify</a>
 </body>
-</html>
+</html> 
