continuação do desenvolvimento do css e alteração de um paragráfo do HTML,para strong

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
         <img src="./meus projetos.jpg" alt="imagem 88 por 88, sophia santana">
         <h1>sophia santana</h1>
-        <p>são paulo,brasil</p>
+        <strong>são paulo,brasil</strong>
 
         <p>"Desenvolverdor front-end viciado em leitura."</p>
 
