adicionado o atributo target para as Âncoras. projeto finalizado

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <p>"Desenvolverdor front-end viciado em leitura."</p>
 
-     <a href="https://github.com/sososantna/meus-links/commit/ca78e1d29499f998c954b9af93ac87d6434f089c">github</a>
-    <a href="https://www.tiktok.com/@_musa_002?lang=pt-BR">tiktok</a>
-    <a href="https://www.instagram.com/sophia_santna/?next=%2F">instagram</a>
-    <a href="https://br.pinterest.com/">pinterest</a>
-    <a href="https://open.spotify.com/intl-pt">sportify</a>
+     <a href="https://github.com/sososantna/meus-links/commit/ca78e1d29499f998c954b9af93ac87d6434f089c" target="_blanktarget="">github</a>
+    <a href="https://www.tiktok.com/@_musa_002?lang=pt-BR"target="_black">tiktok</a>
+    <a href="https://www.instagram.com/sophia_santna/?next=%2F"target="_black">instagram</a>
+    <a href="https://br.pinterest.com/"target="_black">pinterest</a>
+    <a href="https://open.spotify.com/intl-pt"target="_black">sportify</a>
 </body>
 </html> 
